kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  labels:
    app: test-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: test-app
        image: europe-central2-docker.pkg.dev/graphite-store-460210-d9/docker-repo/test-app:latest
        ports:
        - containerPort: 5000
        # You can add env variables or resources here if needed

---
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
spec:
  type: LoadBalancer
  selector:
    app: test-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
